--- a/src/js/pages/courses/CoursesList/CoursesListStyle.css
+++ b/src/js/pages/courses/CoursesList/CoursesListStyle.css
@@ -50,7 +50,7 @@
     justify-content: center;
     position: relative;
     overflow: hidden;
-    z-index: 1000;
+    z-index: 10;
 
     background-size: cover;
 }
